add commnet and clean code

--- a/Adapter/DataHMI.qrc
+++ b/Adapter/DataHMI.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file alias="mainSource.qml">main.qml</file> 
     </qresource>
 </RCC>
